--- a/xdg.org
+++ b/xdg.org
@@ -6,6 +6,7 @@
   xdg-mime default feh.desktop image/gif
   xdg-mime default feh.desktop image/jpg
   xdg-mime default feh.desktop image/webp
+  xdg-mime default mpv.desktop video/webm
 #+END_SRC
 
 #+BEGIN_SRC sh
