--- a/xdg.org
+++ b/xdg.org
@@ -7,6 +7,8 @@
   xdg-mime default feh.desktop image/jpg
   xdg-mime default feh.desktop image/webp
   xdg-mime default mpv.desktop video/webm
+  xdg-mime default mpv.desktop audio/flac
+  xdg-mime default org.pwmt.zathura.desktop application/pdf
 #+END_SRC
 
 #+BEGIN_SRC sh
